# gemini-enterprise-looker-block

./: .gitignore  LICENSE  README.md  manifest.lkml  marketplace.json
apps/exporter/: Dockerfile  README.md  pyproject.toml
apps/exporter/src/gemini_exporter/: __init__.py  main.py
infra/terraform/: .terraform.lock.hcl  README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/modules/gemini_analytics_pipeline/: iam.tf  locals.tf  main.tf  outputs.tf  variables.tf
infra/terraform/sql/: merge_export_history.sql.tpl  merge_metrics_history.sql.tpl
looker/: README.md
looker/dashboards/: adoption_overview.dashboard.lookml  agent_activity.dashboard.lookml  usage_and_quality.dashboard.lookml  value_realised.dashboard.lookml  workspace_overview.dashboard.lookml
looker/explores/: gemini_enterprise.explore.lkml  workspace_gemini.explore.lkml
looker/models/: gemini_enterprise.model.lkml  workspace_gemini.model.lkml
looker/views/: active_users.view.lkml  activity.view.lkml  adoption.view.lkml  agents.view.lkml  documents.view.lkml  export_history.view.lkml  metrics_history.view.lkml  search_queries.view.lkml  seats.view.lkml  usage_quality.view.lkml  value.view.lkml  workspace_gemini_activity.view.lkml
