[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-analytics-exporter"
version = "0.1.0"
description = "Cloud Run exporter for Gemini Enterprise analytics metrics."
requires-python = ">=3.11"
dependencies = [
  "google-auth",
  "google-cloud-bigquery",
  "google-cloud-secret-manager",
  "requests",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
where = ["src"]
